Validation and Permissions
Just a small number of validators were added to the modelforms.
Access mixins were put in some views restricting access only for trainee/coach.

--- a/templates/content/articles/create-article.html
+++ b/templates/content/articles/create-article.html
@@ -7,6 +7,7 @@
     <div class="article-form-container form-container ">
         <div class="article-form form-inner"></div>
         <form action="{% url 'article create' %}" method="post">
+            {% include 'partials/field-errors-alert.html' %}
             <label for="">Heading:</label><p>{{ form.heading }}</p>
             <label for="">Article image:</label><p>{{ form.article_image }}</p>
             <label for="">Categories:</label><p>{{ form.category }}</p>
