--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,7 +4,9 @@
 {% block page_content %}
 <h1>Logged user: {{ request.user }}</h1>
 <div class="form-container">
+
     <form method="post" action="{% url 'log in' %}">
+        {% include 'partials/field-errors-alert.html' %}
         {{ form }}
         <input type="hidden" name="next" value="{{ next }}">
         <button type="submit">Log in</button>
