--- a/templates/account/trainee/sign-up.html
+++ b/templates/account/trainee/sign-up.html
@@ -4,10 +4,18 @@
 {% block page_content %}
 
 <div class="container">
+
     <h1 class="form-page-header">Sign up as trainee</h1>
+
+
+
     <div class="form-container">
+
         <div class="trainee-signup-form form-inner">
+
         <form action="{% url 'trainee sign up' %}" method="post">
+                {% include 'partials/field-errors-alert.html' %}
+
             <div>
                 <label for="">Email:</label>{{ form.email }}<p></p>
                 <label for="">Username:</label><p>{{ form.username }}</p>
