--- a/templates/account/trainer/sign-up.html
+++ b/templates/account/trainer/sign-up.html
@@ -7,6 +7,8 @@
     <div class="form-container">
         <div class="trainee-signup-form form-inner">
         <form action="{% url 'trainer sign up' %}" method="post">
+                            {% include 'partials/field-errors-alert.html' %}
+
             <div>
                 <label for="">Email:</label>{{ form.email }}<p></p>
                 <label for="">Username:</label><p>{{ form.username }}</p>
