--- a/templates/content/workouts/create-workout.html
+++ b/templates/content/workouts/create-workout.html
@@ -7,6 +7,7 @@
             <div class="form-container">
                 <div class="workout-form">
                     <form action="{% url 'workout create' %}" method="post">
+                        {% include 'partials/field-errors-alert.html' %}
                     {#    {{ form.as_p }}#}
                         <label for="">Workout name: </label><p>{{ form.name }}</p>
                         <label for="">Exercises: </label><p>{{ form.exercises }}</p>
