Massive improvements to the trainers list
Partner trainers are appearing first with some distinctive style.
Trainees can filter only trainers in their city through the badge next to the trainers profile.
+ a few more styling improvements in the details.

--- a/staticfiles/styles/styles.css
+++ b/staticfiles/styles/styles.css
@@ -7,3 +7,5 @@
 @import 'utils/forms.css';
 @import 'utils/buttons.css';
 @import 'profile-dashboard.css';
+@import 'content/trainers-list.css';
+@import 'content/trainer-info.css';
