--- a/templates/content/exercises/custom/my-exercises.html
+++ b/templates/content/exercises/custom/my-exercises.html
@@ -3,7 +3,7 @@
 {% load content_filters %}
 {% block page_content %}
 <div class="container">
-<h1>My Exercises / <a href="{% url 'exercises list' %}">Back to all Exercises</a></h1>
+<h1>My Exercises / <a href="{% url 'exercises list' %}" style="font-size:22px">Back to all Exercises</a></h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <h1><a href="{% url 'exercise create' %}">Create a new exercise</a></h1>
