Gym list and details
Fixed the details page and some style adjustments to match the other pages.

--- a/staticfiles/styles/styles.css
+++ b/staticfiles/styles/styles.css
@@ -8,4 +8,5 @@
 @import 'utils/buttons.css';
 @import 'profile-dashboard.css';
 @import 'content/trainers-list.css';
-@import 'content/trainer-info.css';
+@import 'content/card-detailed-info.css';
+@import 'content/gyms.css';
