--- a/templates/content/workouts/create-workout.html
+++ b/templates/content/workouts/create-workout.html
@@ -12,7 +12,9 @@
                         <label for="">Workout name: </label><p>{{ form.name }}</p>
                         <label for="">Exercises: </label><p>{{ form.exercises }}</p>
                         <label for="">Duration (minutes):</label><p>{{ form.duration }}</p>
-                        <button>Finish Workout</button>
+                        <div class="workout-modal-btns">
+                            <button class="btn btn-outline-light" style="color:black"><a>Finish Workout</a></button>
+                        </div>
                         {% csrf_token %}
                     </form>
             </div>
